--- a/NEWS
+++ b/NEWS
@@ -210,5 +210,11 @@ BUGFIXES:
 172 ==> 462368 - QTAV-library has been removed from unstable.
 173 ==> 462464 - Cannot play video files: "An error has occurred with the media player...".
 174 ==> 462542 - HTML Gallery behaves oddly.
-175 ==> 
+175 ==> 366286 - Feature request: improved reverse geolocation.
+176 ==> 
+177 ==> 
+178 ==> 
+179 ==> 
+180 ==> 
+
 
