--- a/NEWS
+++ b/NEWS
@@ -211,7 +211,7 @@ BUGFIXES:
 173 ==> 462464 - Cannot play video files: "An error has occurred with the media player...".
 174 ==> 462542 - HTML Gallery behaves oddly.
 175 ==> 366286 - Feature request: improved reverse geolocation.
-176 ==> 
+176 ==> 410425 - Wishlist: Reverse geocoding to IPTC/XMP location fields.
 177 ==> 
 178 ==> 
 179 ==> 
