--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ NEW FEATURES:
 *****************************************************************************************************
 BUGFIXES:
 
-001 ==>
+001 ==> 462598 - All groups disappeared after upgrade of Ubuntu and digiKam.
+002 ==> 
