--- a/NEWS
+++ b/NEWS
@@ -8,4 +8,5 @@ NEW FEATURES:
 BUGFIXES:
 
 001 ==> 462598 - All groups disappeared after upgrade of Ubuntu and digiKam.
-002 ==> 
+002 ==> 322642 - MAINTENANCE : tools an optimizations to maintain database schema.
+003 ==> 
