--- a/NEWS
+++ b/NEWS
@@ -9,4 +9,5 @@ BUGFIXES:
 
 001 ==> 462598 - All groups disappeared after upgrade of Ubuntu and digiKam.
 002 ==> 322642 - MAINTENANCE : tools an optimizations to maintain database schema.
-003 ==> 
+003 ==> 462686 - Compile Error in videodecoder_p.cpp.
+004 ==> 
