--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-digiKam 8.0.0 - Release date: 2022-xx-xx
+digiKam 8.0.0-beta1 - Release date: 2022-12-11
 
 *****************************************************************************************************
 NEW FEATURES:
