--- a/NEWS
+++ b/NEWS
@@ -12,4 +12,5 @@ BUGFIXES:
 003 ==> 462686 - Compile Error in videodecoder_p.cpp.
 004 ==> 462685 - Darktable does not show in "open with" context menu.
 005 ==> 462744 - Will digiKam run on Apple M1 or M2 chips?
-006 ==> 
+006 ==> 462825 - Rename tool combobox history not saving in version 7.9.0.
+007 ==> 
