--- a/NEWS
+++ b/NEWS
@@ -13,4 +13,5 @@ BUGFIXES:
 004 ==> 462685 - Darktable does not show in "open with" context menu.
 005 ==> 462744 - Will digiKam run on Apple M1 or M2 chips?
 006 ==> 462825 - Rename tool combobox history not saving in version 7.9.0.
-007 ==> 
+007 ==> 462913 - Import Cancel button doesn't cancel during "Import > Add images...".
+008 ==> 
