add more possible metadata to detect Android phone BUGS: 462916 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -216,7 +216,7 @@ BUGFIXES:
 178 ==> 449754 - Empty metadata XMP values are created when applying template.
 179 ==> 395094 - Add new option to dissociate rights, locations, contacts and subjects.
 180 ==> 462807 - How to show GPS-Tracks in addition to geotagged photos in Maps view.
-181 ==> 
+181 ==> 462916 - Different renaming behaviors for video files depending of the device.
 182 ==> 
 183 ==> 
 184 ==>.
